🪄 FIX: Set Overflow Initial in wrapperMan

--- a/src/styles/hangman.scss
+++ b/src/styles/hangman.scss
@@ -111,6 +111,7 @@ $primaryColor: #00A8FF;
         .wrapperMan {
             position: relative;
             margin-top: -20px;
+            overflow: initial;
 
             >div {
 
